fixed wtp media queries and gap under footer

--- a/css/footer.css
+++ b/css/footer.css
@@ -7,7 +7,7 @@ footer {
     padding: 10px;
     border-top: 2px var(--black) solid;
     background-color: var(--light-gray);
-    bottom: 0;
+    margin-bottom: 0;
 }
 
 footer a {
